slideshow images shift correctly

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+
   *, *::before, *::after{
   box-sizing: border-box;
   transition: all 0.4s ease-in-out;
@@ -8,7 +9,8 @@ img:hover {
 }
 
 .slide-right {
-  transform: translate(150px, 0%);
+  transition: all 0.150s linear;
+  transform: translate(-600px, 0%);
 }
 
 .bigImage {
@@ -67,22 +69,23 @@ img:hover {
   transform: scale(1.05);
 }
 
-.mySlides {
+/* .mySlides {
   width: 100%;
   height:100%;
   margin: 0 5px;
-}
+} */
 
-.mySlides:hover {
+/* .mySlides:hover {
   transition: all 0.150s linear;
   transform: translate(50px, 0%);
-}
+} */
 
-.slideShowImage {
+
+/* .slideShowImage {
   opacity: 0.4;
   width: 100%;
   height: 100%;
-}
+} */
 
 .slideShowImage:hover {
   transition: all 0.1s ease-in-out;
@@ -143,21 +146,21 @@ img:hover {
 #leftButton {
   fill: white;
   position: absolute;
-  left: 10px;
+  left: 1%;
   top:272px;
 }
 
 #rightButton {
   fill: white;
   position: absolute;
-  left: 1208px;
+  left: 95%;
   top:272px;
 }
 
 #return {
   fill: white;
   position: absolute;
-  left:1220px;
+  left:96%;
   top:16px;
   width: 30px;
 }
@@ -185,18 +188,22 @@ img:hover {
   margin: 0;
   background-color: red;
 }
-
-.modalContent {
-  position: relative;
+/* .slideShow {
+  width:230%;
+  height: 100%;
   display: flex;
-  overflow: hidden;
   justify-content: space-between;
+} */
+
+/* .modalContent {
+  position: relative;
+  overflow: hidden;
   top:120px;
   width: 60%;
   height: 70px;
   background-color: #262626;
   left: 16.3%;
-}
+} */
 
 
 
